blooth module test and image 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.BloothSearchActivity"
+        <activity android:name=".Activity.BluetoothSearchActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Activity.RESightMainActivity"
