--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.dragon4.owo.resight_android"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -26,8 +26,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
-
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'pub.devrel:easypermissions:0.3.0'
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
@@ -36,6 +34,13 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:support-vector-drawable:25.3.0'
     compile 'com.zcw:togglebutton-library:1.0.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.tsengvn:typekit:1.0.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    compile 'com.github.clans:fab:1.6.4'
+
+
+    testCompile 'junit:junit:4.12'
 }
