--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,13 @@ dependencies {
     compile 'com.tsengvn:typekit:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
 
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+
+
     compile 'com.github.clans:fab:1.6.4'
 
 
