--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,15 +35,21 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.0'
     compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.tsengvn:typekit:1.0.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    compile 'com.github.clans:fab:1.6.4'
     compile 'com.jjoe64:graphview:4.2.1'
+    compile 'com.github.clans:fab:1.6.4'
+
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-database:10.2.0'
+
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
