--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,27 +28,33 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'pub.devrel:easypermissions:0.3.0'
-    compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.android.support:design:25.3.0'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:support-vector-drawable:25.3.0'
-    compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.tsengvn:typekit:1.0.1'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+
+
+    // UI
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.tsengvn:typekit:1.0.1'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.zcw:togglebutton-library:1.0.0'
+    compile 'com.zcw:togglebutton-library:1.0.0'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
 
+    // Firebase
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
+
+    // retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
 
     testCompile 'junit:junit:4.12'
 }
