--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,6 @@ dependencies {
     })
 
     compile 'com.zcw:togglebutton-library:1.0.0'
-    compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'pub.devrel:easypermissions:0.3.0'
     compile 'com.android.support:design:25.3.1'
@@ -48,8 +47,10 @@ dependencies {
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
