--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.zcw:togglebutton-library:1.0.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'pub.devrel:easypermissions:0.3.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.0'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
+
+    compile 'com.zcw:togglebutton-library:1.0.0'
+    compile 'pub.devrel:easypermissions:0.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'com.github.clans:fab:1.6.4'
@@ -48,8 +51,11 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+
+
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
