--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
 
     testCompile 'junit:junit:4.12'
