--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
 
+    compile 'com.google.code.gson:gson:2.7'
 
     testCompile 'junit:junit:4.12'
 }
